Flytter enhet til opplysning.periode.verdi i openapiet.
