# mediator/src/main/kotlin/no/nav/dagpenger/behandling/mediator/api/BehandlingsresultatV2Mapper.kt
@@ -181,7 +181,6 @@ private fun Opplysning<*>.tilOpplysningsperiodeDTO(egneId: List<UUID>) =
         opprinnelse = (id in egneId).tilOpprinnelseDTO(),
         gyldigFraOgMed = this.gyldighetsperiode.fraOgMed.tilApiDato(),
         gyldigTilOgMed = this.gyldighetsperiode.tilOgMed.tilApiDato(),
-        enhet = this.opplysningstype.tilEnhetDTO(),
         verdi =
             when (this.opplysningstype.datatype) {
                 BarnDatatype ->
